# rust-course-2026-03-05

./: .gitignore  LICENSE  README.md  formatTables.patch
mdbook/: Cargo.toml  book.toml
mdbook/book/: introduction.html  print.html  searchindex.js  searchindex.json  toc.html  toc.js
mdbook/book/day1/: 01_setup.html  02_fundamentals.html  03_structs_enums.html  04_ownership.html  05_smart_pointers.html
mdbook/book/day2/: 06_collections.html  07_traits.html  08_generics.html  09_pattern_matching.html  10_error_handling.html  11_iterators.html  12_modules_visibility.html
mdbook/book/day3/: 13_hardware_hello.html  14_embedded_foundations.html  15_testing_embedded.html  16_data_communication.html  17_integration_deployment.html  18_complete_system.html
mdbook/book/transfer/: 19_cargo.html  20_codecov.html  21_macros.html  22_unsafe_ffi.html  23_embedded_hal.html  24_async_concurrency.html  25_rust_patterns.html
mdbook/src/: SUMMARY.md  introduction.md
mdbook/src/day1/: 01_setup.md  02_fundamentals.md  03_structs_enums.md  04_ownership.md  05_smart_pointers.md
mdbook/src/day2/: 06_collections.md  07_traits.md  08_generics.md  09_pattern_matching.md  10_error_handling.md  11_iterators.md  12_modules_visibility.md  xx_macros.md
mdbook/src/day3/: 13_cargo.md  13_hardware_hello.md  14_codecov.md  14_embedded_foundations.md  14_testing.md  15_macros.md  15_testing_embedded.md  16_data_communication.md  16_unsafe_ffi.md  17_embedded_hal.md  17_integration_deployment.md  17_serde.md  18_async_concurrency.md  18_complete_system.md  19_rust_patterns.md
mdbook/src/day4/: 20_hardware_hello.md  20_imgforge_cli.md  21_blinky.md  21_embedded_foundations.md  21_ffi_acceleration.md  22_async_web_server.md  22_blinky_embassy.md  22_testing_embedded.md  23_concurrency.md  23_data_communication.md  23_temperature_sensor.md  24_integration_deployment.md  24_temperature_store.md  24_testing_polish.md  25_complete_system.md  25_optional_gui.md  25_serial_logging.md
mdbook/src/transfer/: 19_cargo.md  20_codecov.md  21_macros.md  22_unsafe_ffi.md  23_embedded_hal.md  24_async_concurrency.md  25_rust_patterns.md
solutions/: README.md
solutions/day1/02_fundamentals/: Cargo.toml
solutions/day1/02_fundamentals/src/: main.rs
solutions/day1/03_structs_enums/: Cargo.toml
solutions/day1/03_structs_enums/src/: main.rs
solutions/day1/04_ownership/: Cargo.toml
solutions/day1/04_ownership/src/: main.rs
solutions/day1/05_smart_pointers/: Cargo.toml
solutions/day1/05_smart_pointers/src/: main.rs
solutions/day2/: Cargo.toml  README.md
solutions/day2/06_collections/: Cargo.toml
solutions/day2/06_collections/src/: lib.rs  tests.rs
solutions/day2/07_traits/: Cargo.toml
solutions/day2/07_traits/src/: lib.rs
solutions/day2/08_generics/: Cargo.toml
solutions/day2/08_generics/src/: lib.rs
solutions/day2/09_pattern_matching/: Cargo.toml
solutions/day2/09_pattern_matching/src/: lib.rs
solutions/day2/10_error_handling/: Cargo.toml
solutions/day2/10_error_handling/src/: lib.rs
solutions/day2/11_iterators/: Cargo.toml
solutions/day2/11_iterators/src/: lib.rs
solutions/day2/12_macros/: Cargo.toml
solutions/day2/12_macros/src/: lib.rs
solutions/day2/13_modules_visibility/: Cargo.toml
solutions/day2/13_modules_visibility/src/: lib.rs
solutions/day3/14_testing/: Cargo.toml
solutions/day3/14_testing/src/: lib.rs
solutions/day3/17_serde/: Cargo.toml
solutions/day3/17_serde/src/: lib.rs
solutions/day3/18_concurrency/: Cargo.toml
solutions/day3/18_concurrency/src/: lib.rs
solutions/day3/chapter13_hardware_hello/: Cargo.toml
solutions/day3/chapter14_data_structures/: Cargo.toml
solutions/day3/chapter15_testing/: Cargo.toml  build.rs  test.sh
solutions/day3/chapter15_testing/src/: lib.rs
solutions/day3/chapter16_communication/: Cargo.toml
solutions/day3/chapter17_integration/: Cargo.toml  README.md
solutions/day3/chapter17_integration/src/: temperature.rs
solutions/day3/chapter18_extensions/: Cargo.toml  test.sh
solutions/day3/chapter18_extensions/src/: lib.rs  power.rs
solutions/day3/esp_generate_output/: Cargo.toml
solutions/day4/chapter20_hardware_hello/: Cargo.toml
solutions/day4/chapter21_blinky/: Cargo.toml
solutions/day4/chapter21_data_structures/: Cargo.toml
solutions/day4/chapter22_blinky_embassy/: Cargo.toml
solutions/day4/chapter22_testing/: Cargo.toml  README.md
solutions/day4/chapter23_communication/: Cargo.toml  README.md  test.sh
solutions/day4/chapter23_temperature_sensor/: Cargo.toml
solutions/day4/chapter24_integration/: Cargo.toml  test.sh
solutions/day4/chapter24_integration/src/: communication.rs  lib.rs
solutions/day4/chapter24_temperature_store/: Cargo.toml  README.md  build.rs  test.sh
solutions/day4/chapter24_temperature_store/src/: lib.rs  store.rs
solutions/day4/chapter25_extensions/: Cargo.toml  README.md
solutions/day4/chapter25_extensions/src/: communication.rs  temperature.rs
solutions/day4/chapter25_serial_logging/: Cargo.toml  build.rs
solutions/day4/chapter25_serial_logging/src/: command.rs  lib.rs  store.rs
solutions/day4/esp_generate_output/: Cargo.toml
solutions/day4/imgforge/: Cargo.toml
solutions/day4/imgforge/src/: batch.rs  config.rs  error.rs  lib.rs  main.rs  server.rs  transform.rs  transform_imagers.rs  transform_turbojpeg.rs
solutions/day4/imgforge/tests/: api_tests.rs  transform_tests.rs
solutions/downcast/: Cargo.toml
solutions/downcast/src/: lib.rs  liquid.rs  main.rs  oil.rs  water.rs
solutions/downcast/vec/: Cargo.toml
solutions/downcast/vec/src/: main.rs
solutions/transfer/testing2/: Cargo.toml  README.md
solutions/transfer/testing2/.cargo/: config.toml
solutions/transfer/testing2/src/: lib.rs  main.rs
