[package]
edition      = "2024"
name         = "chapter23_temperature_sensor"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "chapter23_temperature_sensor"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32c3", "unstable"] }
esp-rtos = { version = "0.2.0", features = ["embassy", "esp32c3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32c3"] }
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
embassy-sync = "0.7.2"
critical-section = "1.2.0"
esp-println = { version = "0.14.0", features = ["esp32c3"] }

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
